[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/VillageScreen.gd" id="1_village"]

[node name="VillageScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_village")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6
modulate = Color(1, 1, 1, 0.4)
mouse_filter = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.1, 0.2, 0.6)
mouse_filter = 2

[node name="SilhouetteRect" type="TextureRect" parent="."]
layout_mode = 1
anchor_left = 0.6
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6
modulate = Color(1, 1, 1, 0.25)
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 24

[node name="Root" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BodyText" type="RichTextLabel" parent="Margin/Root"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 22
theme_override_font_sizes/italics_font_size = 22
bbcode_enabled = true

[node name="NPCButtons" type="VBoxContainer" parent="Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ShopButtons" type="HBoxContainer" parent="Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DepartButton" type="Button" parent="Margin/Root"]
layout_mode = 2
custom_minimum_size = Vector2(280, 44)
theme_override_font_sizes/font_size = 22
text = "出発する"

