extends Control

signal depart_requested
signal status_updated

@onready var body_text: RichTextLabel = $Margin/Root/BodyText
@onready var npc_buttons: VBoxContainer = $Margin/Root/NPCButtons
@onready var shop_buttons: HBoxContainer = $Margin/Root/ShopButtons
@onready var depart_button: Button = $Margin/Root/DepartButton
@onready var background: ColorRect = $Background
@onready var background_image: TextureRect = $BackgroundImage
@onready var silhouette_rect: TextureRect = $SilhouetteRect

const WORLD_BACKGROUND_KEYS := {
	"medieval": "backgrounds/medieval_bg.png",
	"future": "backgrounds/future_bg.png",
}

const SILHOUETTE_KEYS := {
	"elder": "silhouettes/elder.png",
	"warrior": "silhouettes/warrior.png",
	"scholar": "silhouettes/scholar.png",
	"monster": "silhouettes/monster.png",
	"cyborg": "silhouettes/cyborg.png",
	"merchant": "silhouettes/merchant.png",
}

var village_data: Dictionary = {}
var current_npc_index: int = -1  # -1 = showing main village text


func _ready() -> void:
	depart_button.pressed.connect(_on_depart)
	_apply_theme()
	_load_village_data()
	_show_village_main()
	_update_status()


func _apply_theme() -> void:
	var world_id: String = ThemeManager.current_world
	if WORLD_BACKGROUND_KEYS.has(world_id):
		var tex: Texture2D = AssetManager.get_texture(WORLD_BACKGROUND_KEYS[world_id])
		if tex != null:
			background_image.texture = tex
			background.color = Color(ThemeManager.get_background_color(), 0.6)
		else:
			background_image.texture = null
			background.color = ThemeManager.get_background_color()
	else:
		background_image.texture = null
		background.color = ThemeManager.get_background_color()
	
	# Style depart button
	var accent: Color = ThemeManager.get_accent_color()
	var normal := UITheme.create_button_stylebox(ThemeManager.get_button_color())
	normal.border_color = Color(accent, 0.5)
	normal.set_border_width_all(1)
	var hover := UITheme.create_button_stylebox(ThemeManager.get_button_hover_color())
	hover.border_color = Color(accent, 0.8)
	hover.set_border_width_all(1)
	depart_button.add_theme_stylebox_override("normal", normal)
	depart_button.add_theme_stylebox_override("hover", hover)
	depart_button.add_theme_color_override("font_color", ThemeManager.get_text_color())


func _load_village_data() -> void:
	var world_id: String = GameState.selected_world_id
	
	# Try to load from API data (village_npc events in events_by_world)
	var api_village: Dictionary = _build_village_from_api(world_id)
	if not api_village.is_empty():
		village_data = api_village
		return
	
	# Fallback to local JSON file
	var path: String = "res://data/village/%s_village.json" % world_id
	if FileAccess.file_exists(path):
		var file: FileAccess = FileAccess.open(path, FileAccess.READ)
		if file != null:
			var parsed: Variant = JSON.parse_string(file.get_as_text())
			if parsed is Dictionary:
				village_data = parsed
				return
	
	# Ultimate fallback: embedded data
	village_data = _get_default_village_data(world_id)


func _build_village_from_api(world_id: String) -> Dictionary:
	## Build village data from village_npc type events loaded via API
	var events: Array = GameState.get_events_for_world(world_id)
	var npcs: Array = []
	
	for event: Variant in events:
		if event is not Dictionary:
			continue
		if event.get("type", "") != "village_npc":
			continue
		
		# Extract NPC metadata from effects_json (stored in "effects" after transform)
		var meta: Dictionary = event.get("effects", {})
		var npc_id: String = meta.get("npc_id", event.get("event_id", ""))
		var npc_name_ja: String = meta.get("npc_name_ja", "")
		var npc_name_en: String = meta.get("npc_name_en", "")
		var silhouette: String = meta.get("silhouette", event.get("speaker", ""))
		
		# reaction_slots contain the loop-dependent dialogues
		var reaction_slots: Array = event.get("reaction_slots", [])
		var dialogues: Array = []
		for slot: Variant in reaction_slots:
			if slot is not Dictionary:
				continue
			dialogues.append({
				"text_ja": slot.get("text_ja", slot.get("text", "")),
				"text_en": slot.get("text_en", ""),
				"conditions": slot.get("conditions", {})
			})
		
		if dialogues.is_empty():
			# Use main text as single dialogue
			dialogues.append({
				"text_ja": event.get("text_ja", event.get("text", "")),
				"text_en": event.get("text_en", ""),
				"conditions": {}
			})
		
		npcs.append({
			"id": npc_id,
			"name_ja": npc_name_ja,
			"name_en": npc_name_en,
			"silhouette": silhouette,
			"dialogues": dialogues
		})
	
	if npcs.is_empty():
		return {}
	
	# Build village description from world setting
	var world: Dictionary = GameState.get_world_by_id(world_id)
	var desc_ja: String = world.get("blurb_ja", world.get("blurb", ""))
	var desc_en: String = world.get("blurb_en", "")
	
	return {
		"description_ja": desc_ja,
		"description_en": desc_en,
		"npcs": npcs
	}


func _get_default_village_data(world_id: String) -> Dictionary:
	# Fallback village data embedded
	if world_id == "medieval":
		return {
			"description_ja": "çŸ³é€ ã‚Šã®æ‘ã®å…¥å£ã€‚å†·ãŸã„é¢¨ãŒå¹ãæŠœã‘ã‚‹ã€‚æ—…äººã®å§¿ã¯ã¾ã°ã‚‰ã ã€‚",
			"description_en": "The entrance to a stone village. Cold wind blows through.",
			"npcs": [
				{
					"id": "villager", "name_ja": "æ‘äºº", "name_en": "Villager",
					"silhouette": "warrior",
					"dialogues": [
						{"text_ja": "ã‚ã‚ã€æ—…äººã‹ã€‚ã“ã®å…ˆã¯å±é™ºã ã€‚æ°—ã‚’ã¤ã‘ãªã€‚", "text_en": "A traveler? Be careful ahead.", "conditions": {}},
						{"text_ja": "â€¦â€¦ã¾ãŸæ¥ãŸã®ã‹ï¼Ÿ ã„ã‚„ã€æ°—ã®ã›ã„ã ãªã€‚", "text_en": "...back again? No, must be my imagination.", "conditions": {"min_loop": 3}},
						{"text_ja": "ãŠå‰â€¦â€¦ä½•åº¦ã“ã“ã«æ¥ãŸï¼Ÿ ãã®ç›®ã€ä½•ã‹ã‚’çŸ¥ã£ã¦ã„ã‚‹ç›®ã ã€‚", "text_en": "How many times have you come here? Those eyes know something.", "conditions": {"min_loop": 7}}
					]
				},
				{
					"id": "merchant", "name_ja": "å•†äºº", "name_en": "Merchant",
					"silhouette": "merchant",
					"dialogues": [
						{"text_ja": "ã„ã‚‰ã£ã—ã‚ƒã„ã€‚æ—…ã®å‚™ãˆã¯ã—ã¦ã„ãã‹ã„ï¼Ÿ", "text_en": "Welcome. Need supplies for your journey?", "conditions": {}},
						{"text_ja": "ã‚ã‚“ãŸã€å‰ã«ã‚‚æ¥ãªã‹ã£ãŸã‹ã„ï¼Ÿ ã¾ã‚ã„ã„ã€å•†å£²ã¯å•†å£²ã ã€‚", "text_en": "Haven't you been here before? Well, business is business.", "conditions": {"min_loop": 3}},
						{"text_ja": "â€¦â€¦ä½•åº¦ç›®ã ï¼Ÿ ä¿ºã«ã¯ã‚ã‹ã‚‹ã€‚ãŠå‰ã®ç›®ã¯ã€Œç¹°ã‚Šè¿”ã—ã¦ã„ã‚‹è€…ã€ã®ç›®ã ã€‚", "text_en": "How many times now? I can tell. Your eyes are those of one who repeats.", "conditions": {"min_loop": 7}}
					]
				},
				{
					"id": "old_woman", "name_ja": "è€å©†", "name_en": "Old Woman",
					"silhouette": "elder",
					"dialogues": [
						{"text_ja": "ãµãµâ€¦â€¦è‹¥ã„ã®ã€æ­»ã¬ã‚“ã˜ã‚ƒãªã„ã‚ˆã€‚", "text_en": "Heh... don't die, young one.", "conditions": {}},
						{"text_ja": "â€¦â€¦ã¾ãŸæ­»ã‚“ã§æˆ»ã£ã¦ããŸã®ã‹ã„ã€‚å¯å“€æƒ³ã«ã­ãˆã€‚", "text_en": "...died and came back again, have you? Poor thing.", "conditions": {"min_loop": 3}},
						{"text_ja": "ãŠå‰ã•ã‚“ã¯ã€Œæ®‹ç—•ã€ã ã‚ˆã€‚æ¶ˆã—æ®‹ã‚Šã€‚ã“ã®ä¸–ç•Œã«æŸ“ã¿ã¤ã„ãŸé­‚ã•ã€‚", "text_en": "You are a 'residue'. A soul stained into this world.", "conditions": {"min_loop": 7, "requires_truth_stage": 2}}
					]
				}
			]
		}
	else:  # future
		return {
			"description_ja": "å†·ãŸã„è›å…‰ç¯ãŒç¬ãã€‚ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ã®å…¥å£ã€‚é›»å­éŸ³ãŒä½ãéŸ¿ãã€‚",
			"description_en": "Cold fluorescent lights flicker. The terminal entrance. Electronic hum.",
			"npcs": [
				{
					"id": "terminal_ai", "name_ja": "ã‚¿ãƒ¼ãƒŸãƒŠãƒ«AI", "name_en": "Terminal AI",
					"silhouette": "cyborg",
					"dialogues": [
						{"text_ja": "ã‚ˆã†ã“ãã€‚æœ¬æ–½è¨­ã®æ¡ˆå†…ã‚’è¡Œã„ã¾ã™ã€‚å®‰å…¨ãªæ¢ç´¢ã‚’ã€‚", "text_en": "Welcome. I will guide you. Explore safely.", "conditions": {}},
						{"text_ja": "â€¦â€¦åŒä¸€ç”Ÿä½“ãƒ‘ã‚¿ãƒ¼ãƒ³ã‚’è¤‡æ•°å›æ¤œå‡ºã€‚ãƒ­ã‚°ã«çŸ›ç›¾ã‚ã‚Šã€‚", "text_en": "...identical biometric pattern detected multiple times. Log inconsistency.", "conditions": {"min_loop": 3}},
						{"text_ja": "è­¦å‘Šï¼šã‚ãªãŸã®å­˜åœ¨ã¯ã‚·ã‚¹ãƒ†ãƒ ä¸Šã€Œå‰Šé™¤æ¸ˆã¿ã€ã§ã™ã€‚æ®‹ç—•ã¨ã—ã¦å†åˆ†é¡ã—ã¾ã™ã€‚", "text_en": "Warning: You are classified as 'deleted'. Reclassifying as residue.", "conditions": {"min_loop": 7, "requires_truth_stage": 2}}
					]
				},
				{
					"id": "mechanic_log", "name_ja": "æ•´å‚™å£«ã®è¨˜éŒ²", "name_en": "Mechanic's Log",
					"silhouette": "scholar",
					"dialogues": [
						{"text_ja": "ã€è¨˜éŒ²ã€‘æœ¬æ—¥ã‚‚ç•°å¸¸ãªã—ã€‚å®šæœŸãƒ¡ãƒ³ãƒ†ãƒŠãƒ³ã‚¹å®Œäº†ã€‚", "text_en": "[Log] No anomalies today. Routine maintenance complete.", "conditions": {}},
						{"text_ja": "ã€è¨˜éŒ²ã€‘åŒã˜äººç‰©ãŒç¹°ã‚Šè¿”ã—æ¥è¨ªã€‚ç›£è¦–ã‚«ãƒ¡ãƒ©ã®èª¤ä½œå‹•ã‹ï¼Ÿ", "text_en": "[Log] Same person visiting repeatedly. Camera malfunction?", "conditions": {"min_loop": 3}},
						{"text_ja": "ã€è¨˜éŒ²ã€‘N-06ã®æ®‹ã—ãŸãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã‚’ç™ºè¦‹ã€‚ã€Œç¹°ã‚Šè¿”ã™è€…ã¸â€”â€”é€ƒã’ã‚‹ãªã€", "text_en": "[Log] Found N-06's message. 'To the one who repeats â€” don't run.'", "conditions": {"min_loop": 7}}
					]
				},
				{
					"id": "security_log", "name_ja": "è­¦å‚™ãƒ­ã‚°", "name_en": "Security Log",
					"silhouette": "warrior",
					"dialogues": [
						{"text_ja": "ã€è­¦å‚™ã€‘ã‚»ã‚¯ã‚¿ãƒ¼å†…ã«ä¸å¯©è€…ãªã—ã€‚é€šå¸¸é‹è¡Œã‚’ç¶™ç¶šã€‚", "text_en": "[Security] No intruders. Normal operations.", "conditions": {}},
						{"text_ja": "ã€è­¦å‚™ã€‘è­¦å‘Šâ€”â€”åŒä¸€äººç‰©ã®è¤‡æ•°å›ä¾µå…¥ã‚’æ¤œçŸ¥ã€‚å¯¾å‡¦ãƒ—ãƒ­ãƒˆã‚³ãƒ«ä¸æ˜ã€‚", "text_en": "[Security] Warning â€” repeated intrusion by same individual. No protocol.", "conditions": {"min_loop": 3}},
						{"text_ja": "ã€è­¦å‚™ã€‘æœ€çµ‚è¨˜éŒ²ï¼šã‚‚ã†æ­¢ã‚ã‚‰ã‚Œãªã„ã€‚å½¼ã¯ã€Œæ¶ˆã—æ®‹ã‚Šã€ã ã€‚ã‚·ã‚¹ãƒ†ãƒ ã®å¤–ã«ã„ã‚‹ã€‚", "text_en": "[Security] Final log: Can't stop them. They are 'residue'. Outside the system.", "conditions": {"min_loop": 7, "requires_truth_stage": 2}}
					]
				}
			]
		}


func _show_village_main() -> void:
	current_npc_index = -1
	_hide_silhouette()
	
	var world: Dictionary = GameState.get_world_by_id(GameState.selected_world_id)
	var world_name: String = LocaleManager.tr_data(world, "name")
	depart_button.text = LocaleManager.t("ui.village_depart")
	
	var desc: String = LocaleManager.tr_data(village_data, "description")
	if desc.is_empty():
		desc = village_data.get("description", "")
	
	# Build 16: Inheritance effect display at village
	var inheritance_text: String = _get_inheritance_display()
	if not inheritance_text.is_empty():
		body_text.text = "[color=#8888aa]%s[/color]\n\n[i]%s[/i]" % [inheritance_text, desc]
	else:
		body_text.text = "[i]%s[/i]" % desc
	
	_render_npc_buttons()
	_render_shop_buttons()
	_render_relic_button()


func _get_inheritance_display() -> String:
	# Show what was inherited (Task 4)
	var parts: Array = []
	# Check if run has inheritance bonuses applied
	# We check pending_inheritance before it's cleared by start_new_run
	# Actually start_new_run clears it, so we track separately
	# For now, check if loop > 1 and show generic text
	if GameState.loop_count > 1:
		if GameState.run_max_hp > 100:
			var bonus: int = GameState.run_max_hp - 100
			parts.append(LocaleManager.t("ui.inherited_display_hp", {"amount": bonus}))
		if GameState.run_gold > 0:
			parts.append(LocaleManager.t("ui.inherited_display_gold", {"amount": GameState.run_gold}))
	
	if parts.is_empty():
		return ""
	return LocaleManager.t("ui.inherited_from_past") + "\n" + "\n".join(parts)


func _render_npc_buttons() -> void:
	for child: Node in npc_buttons.get_children():
		child.queue_free()
	
	var npcs: Array = village_data.get("npcs", [])
	for i: int in range(npcs.size()):
		var npc: Dictionary = npcs[i]
		var npc_name: String = LocaleManager.tr_data(npc, "name")
		if npc_name.is_empty():
			npc_name = npc.get("name", "NPC")
		var btn := UITheme.create_choice_button(LocaleManager.t("ui.village_talk", {"name": npc_name}))
		btn.pressed.connect(_on_npc_talk.bind(i))
		npc_buttons.add_child(btn)


func _render_shop_buttons() -> void:
	for child: Node in shop_buttons.get_children():
		child.queue_free()
	
	# Healing potion: HP+30, 20G
	var potion_btn := UITheme.create_choice_button(LocaleManager.t("ui.shop_potion", {"cost": 20}))
	potion_btn.pressed.connect(_on_buy_potion)
	shop_buttons.add_child(potion_btn)
	
	# Talisman: DEF+2 for 1 battle, 30G
	var talisman_btn := UITheme.create_choice_button(LocaleManager.t("ui.shop_talisman", {"cost": 30}))
	talisman_btn.pressed.connect(_on_buy_talisman)
	shop_buttons.add_child(talisman_btn)


func _render_relic_button() -> void:
	var all_relics: Array = GameState.get_all_active_relics()
	if all_relics.is_empty():
		return
	var relic_btn := UITheme.create_choice_button("ğŸ”® éºç‰©ç¢ºèª (%d)" % all_relics.size())
	relic_btn.pressed.connect(_on_show_relics)
	npc_buttons.add_child(relic_btn)


func _on_show_relics() -> void:
	for child: Node in npc_buttons.get_children():
		child.queue_free()
	
	var all_relics: Array = GameState.get_all_active_relics()
	var text: String = "[b]æ‰€æŒéºç‰©[/b]\n\n"
	for r: Variant in all_relics:
		if r is not Dictionary:
			continue
		var rname: String = r.get("name_ja", "???")
		var rtype: String = r.get("relic_type", "")
		var eff: Dictionary = r.get("effect", {})
		var desc: String = str(eff.get("description_ja", ""))
		var icon: String = "âœ¦" if rtype == "artifact" else "â˜½" if rtype == "curse" else "âœ§"
		var type_label: String = "éºç‰©" if rtype == "artifact" else "å‘ªã„" if rtype == "curse" else "æ©å¯µ"
		text += "%s [b]%s[/b] [%s]\n  %s\n\n" % [icon, rname, type_label, desc]
	
	body_text.text = text
	
	var back_btn := UITheme.create_choice_button("æˆ»ã‚‹")
	back_btn.pressed.connect(_show_village_main)
	npc_buttons.add_child(back_btn)


func _on_npc_talk(npc_index: int) -> void:
	current_npc_index = npc_index
	var npcs: Array = village_data.get("npcs", [])
	if npc_index >= npcs.size():
		return
	
	var npc: Dictionary = npcs[npc_index]
	var npc_name: String = LocaleManager.tr_data(npc, "name")
	if npc_name.is_empty():
		npc_name = npc.get("name", "NPC")
	
	# Show silhouette
	var sil_type: String = npc.get("silhouette", "")
	_show_silhouette(sil_type)
	
	# Find best matching dialogue
	var dialogues: Array = npc.get("dialogues", [])
	var best_dialogue: Dictionary = {}
	for dialogue: Variant in dialogues:
		if dialogue is not Dictionary:
			continue
		var conditions: Dictionary = dialogue.get("conditions", {})
		if conditions.is_empty() or GameState.check_event_conditions(conditions):
			best_dialogue = dialogue  # Last matching = highest priority (most specific)
	
	var text: String = LocaleManager.tr_data(best_dialogue, "text")
	if text.is_empty():
		text = best_dialogue.get("text", "â€¦â€¦")
	
	body_text.text = "[b]%s[/b]\n\n%s" % [npc_name, text]
	
	# Replace NPC buttons with "back" button
	for child: Node in npc_buttons.get_children():
		child.queue_free()
	var back_btn := UITheme.create_choice_button(LocaleManager.t("ui.back"))
	back_btn.pressed.connect(_show_village_main)
	npc_buttons.add_child(back_btn)


func _on_buy_potion() -> void:
	if GameState.buy_item("potion", "å›å¾©è–¬", "heal", 30, 20):
		body_text.text += "\n\n[color=#60ff60]%s[/color]" % LocaleManager.t("ui.shop_bought_potion")
	else:
		body_text.text += "\n\n[color=#ff6060]%s[/color]" % LocaleManager.t("ui.shop_no_gold")
	_update_status()


func _on_buy_talisman() -> void:
	if GameState.buy_item("talisman", "è­·ç¬¦", "defense_buff", 2, 30):
		body_text.text += "\n\n[color=#60ff60]%s[/color]" % LocaleManager.t("ui.shop_bought_talisman")
	else:
		body_text.text += "\n\n[color=#ff6060]%s[/color]" % LocaleManager.t("ui.shop_no_gold")
	_update_status()


func _show_silhouette(sil_type: String) -> void:
	if sil_type.is_empty() or not SILHOUETTE_KEYS.has(sil_type):
		_hide_silhouette()
		return
	var tex: Texture2D = AssetManager.get_texture(SILHOUETTE_KEYS[sil_type])
	if tex != null:
		silhouette_rect.texture = tex
		silhouette_rect.visible = true
		var tween: Tween = create_tween()
		silhouette_rect.modulate.a = 0.0
		tween.tween_property(silhouette_rect, "modulate:a", 0.25, 0.5)


func _hide_silhouette() -> void:
	if silhouette_rect.visible:
		var tween: Tween = create_tween()
		tween.tween_property(silhouette_rect, "modulate:a", 0.0, 0.3)
		tween.tween_callback(func() -> void: silhouette_rect.visible = false)


func _on_depart() -> void:
	depart_requested.emit()


func _update_status() -> void:
	status_updated.emit()
